[package]
name = "imagehost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["multipart"] }
futures = "0.3.28"
mime = "0.3.17"
poem = "1.3.55"
poem-openapi = "2.0.26"
serde = "1.0.163"
tokio = { version = "1.28.2", features = ["full"] }
zip = "0.6.6"
