[profile.release]
lto = "fat"
codegen-units = 1

[package]
name = "imagehost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_zip = { version = "0.0.15", features = ["full"] }
mimalloc = "0.1.37"
poem = "1.3.55"
poem-openapi = "2.0.26"
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
zip = "0.6.6"
